# mnemosyne-core

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.cfg  update-and-restart.sh
docs/: bot_functionality_overview.md
docs/plans/: chromadb_integration_plan.md  life_context_plan.md  memory_refactor_plan.md
telegram_bot/: config.py  constants.py  main.py  service_factory.py  utils.py
telegram_bot/scheduled_tasks/: correlation_engine_task.py  memory_consolidation_task.py  morning_report_task.py  obsidian_embedding_task.py  smart_context_trigger_task.py
telegram_bot/service/: ai_assitant_service.py  background_task_executor.py  bot_restart_service.py  db_service.py  garmin_data_models.py  influxdb_garmin_data_exporter.py  llm_service.py  message_transcription_service.py  morning_report_service.py  scheduled_jobs_facade.py  scheduled_task_service.py
tests/: test_chroma_config.py  test_utils.py
tests/ai_assistant/: test_semantic_search_tool.py
tests/scheduled_tasks/: test_memory_consolidation_prompt.py  test_memory_consolidation_task.py  test_obsidian_embedding_task.py
tests/scripts/: consolidate_memory.py  export_markdown_summary.py  generate_morning_report.py  run_correlation_engine.py  run_garmin_data_exporter.py  run_life_context_service.py  run_obsidian_embeddings.py  run_obsidian_service.py  test_run_obsidian_embeddings_cli.py
tests/service/: run_calendar_service.py  run_context_trigger.py  test_activity_impact_variance_service.py  test_calendar_service_life_context.py  test_context_aggregator.py  test_correlation_config.py  (+13 more)
(+70 files in other folders)
